[gd_scene load_steps=4 format=2]

[ext_resource path="res://SIMULATION/scripts/RED CIRCLE.gd" type="Script" id=1]
[ext_resource path="res://IMG/POISON.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.3074

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 55
collision_mask = 55
input_pickable = true
mass = 1.51
can_sleep = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="direction" type="Timer" parent="."]

[connection signal="input_event" from="." to="." method="_on_RigidBody2D_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="direction" to="." method="_on_direction_timeout"]
